--- a/vignettes/color_inst.Rmd
+++ b/vignettes/color_inst.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Institutional colors"
 author: "SPDS, uni.kn"
-date: "2022 10 20"
+date: "2022 10 26"
 output: 
   rmarkdown::html_vignette: 
     fig_caption: yes
@@ -39,19 +39,51 @@ knitr::opts_chunk$set(echo = TRUE,
 The color palettes included in the **unikn** package are based on the CD\ manual of the [University of Konstanz](https://www.uni-konstanz.de/). 
 However, the functionality provided by the package makes it easy and straightforward to define and use **your own colors**.  
 
-This vignette shows how the color-related tools of **unikn** can be used for **creating color palettes** for other purposes and institutions. 
+This vignette first shows which color palettes from other institutions are currently provided by the **unikn** package. 
+As these will never be complete, it then explains how the color-related tools of **unikn** can be used for **creating new color palettes**. 
 <!-- Main color info: --> 
 (For a general introduction to the package's colors, color palettes, and color functions, see the vignettes on [Colors and color functions](colors.html) and [Color recipes](color_recipes.Rmd). 
 The vignette on [text](text.html) provides information on creating text boxes and decorations.) 
 
+We install or load the **unikn** package to get started: 
+
+```{r load-pkg-colors, message = FALSE, warning = FALSE}
+# install.packages('unikn')  # install unikn from CRAN client
+library('unikn')             # load the package
+```
+
+
+## Current color palettes
+
+### Overview
+
+In addition to the specific color palettes of the [University of Konstanz](https://www.uni-konstanz.de/), 
+**unikn** currently provides the general color palettes of the following institutions: 
+
+- [ETH Zurich](https://ethz.ch/): `eth_pal`, `eth_pal_light`, `eth_pal_grey`
+- [Max Planck Society](https://www.mpg.de/): `mpg_pal`
+- [University of Freiburg](https://uni-freiburg.de/): `uni_freiburg_br`, `uni_freiburg_blue`, `uni_freiburg_grey`, `uni_freiburg_info`  
+- [University of Konstanz](https://www.uni-konstanz.de/): `uni_konstanz`, `uni_konstanz_pref`
+- [Princeton University](https://www.princeton.edu/): `uni_princeton_0`, `uni_princeton_1`, `uni_princeton_2` 
+
+These palettes are exported (as named vectors) and documented (to credit their contributors and sources). 
+We can use and modify these palettes with the **unikn** [color functions](colors.html):
+
+```{r show-add-pals, fig.width = 7.5, out.width = "85%", fig.asp = .90}
+seecol("add", main = "Color palettes from various institutions")
+```
+
+
+### Call for contributions
+
 <!-- Collecting contributed color palettes: -->
 
-> **Call for contributions**
+> **Collecting color palettes**
 >
-> Have you used **unikn** to create **your own color palettes**?  
+> Are you using **unikn** to create **your own color palettes**?  
 > If so, please **let us know** (e.g., by posting on this [GitHub issue](https://github.com/hneth/unikn/issues/11))!  
 >  
-> We collect color palettes from other institutions to make them available to R users in future versions of **unikn**.  
+> We collect color palettes from other institutions to make them available in future versions of **unikn**.  
 >   
 > To enable us to verify and provide appropriate credit to your contributions, please provide us with the following information:  
 >   
@@ -63,13 +95,6 @@ The vignette on [text](text.html) provides information on creating text boxes an
 
 
 ## Defining colors and color palettes 
-
-We install and load the **unikn** package to get started: 
-
-```{r load-pkg-colors, message = FALSE, warning = FALSE}
-# install.packages('unikn')  # install unikn from CRAN client
-library('unikn')             # load the package
-```
 
 The following examples show how to define color palettes (with dedicated color names) for three institutions. 
 They can be easily adapted to any other group, company, or entity, that uses some pre-defined set of colors. 
@@ -93,11 +118,11 @@ As the [University of Freiburg](https://uni-freiburg.de/) kindly provides their 
 
 # Basic colors: ---- 
 
-uni_freiburg_blaurot <- c("#004a99", "#c1002a")
-names(uni_freiburg_blaurot) <- c("uni-blau", "uni-rot")
+uni_freiburg_br <- c("#004a99", "#c1002a")
+names(uni_freiburg_br) <- c("uni-blau", "uni-rot")
 
-uni_freiburg_basic <- c("#004a99", "white", "#c1002a")  # add "white" for better gradients
-names(uni_freiburg_basic) <- c("uni-blau", "weiss", "uni-rot")
+uni_freiburg_bwr <- c("#004a99", "white", "#c1002a")  # add "white" for better gradients
+names(uni_freiburg_bwr) <- c("uni-blau", "weiss", "uni-rot")
 
 # Web colors: ----
 
@@ -134,7 +159,7 @@ Once a new color palette has been defined (in your current R\ environment), use 
 ```{r freiburg-seecol, fig.width = 5, fig.asp = .80, fig.align = 'center', collapse = TRUE}
 # View color palette:
 seecol(uni_freiburg_info, main = "Colors of the University of Freiburg")
-# seecol(uni_freiburg_basic, n = 7)  # extend color palette
+# seecol(uni_freiburg_bwr, n = 7)  # extend color palette
 # seecol(c(uni_freiburg_blue, "white", uni_freiburg_grey))  # mix color palette
 
 # use in a demo plot:
@@ -275,10 +300,10 @@ Once a new palette has been defined (and is available in your current R environm
 
 ```{r compare-custom-pals, eval = TRUE, fig.width = 5, fig.asp = .50, fig.align = 'center', collapse = TRUE}
 # Compare and extend custom color palettes:
-# seecol(list(uni_freiburg_info, uni_freiburg_basic, mpg_pal, uni_princeton_1))
+# seecol(list(uni_freiburg_info, uni_freiburg_bwr, mpg_pal, uni_princeton_1))
 
 # Scaled version: 
-seecol(list(uni_freiburg_basic, uni_princeton_1, mpg_pal, pal_unikn), n = 9,
+seecol(list(uni_freiburg_bwr, uni_princeton_1, mpg_pal, pal_unikn), n = 9,
        pal_names = c("Uni Freiburg", "Princeton Uni", "Max Planck", "Uni Konstanz"),
        main = "Comparing scaled color palettes")
 ```
