--- a/README.Rmd
+++ b/README.Rmd
@@ -40,20 +40,18 @@ library(unikn)  # load package
 
 ### Enabling corporate design elements in\ R {-}
 
-The **unikn** package provides useful color functions ---\ by defining dedicated colors and color palettes, and commands for changing, viewing, and using them\ --- and styled text elements (e.g., for marking, underlining, or plotting colored titles) in\ R. 
+The **unikn** package provides useful color functions ---\ by defining dedicated colors and color palettes, and commands for changing, viewing, and using them\ --- and styled text elements (e.g., for marking, underlining, or plotting colored titles) in\ [R](https://www.r-project.org/). 
 The package's pre-defined range of colors and text functions is based on the corporate design of the [University of Konstanz](https://www.uni-konstanz.de/) (see [this link](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) for details), but can easily be adapted and extended to other purposes or institutions. 
 
 ## Overview  
 
 Institutions devise corporate designs (CDs) for creating and maintaining a consistent impression in presentations and publications. 
-But even when writing an individual article or thesis, it makes sense to define some graphical elements (e.g., a color scheme) and use them consistently throughout the report. 
-In\ 2014, the [University of Konstanz](https://www.uni-konstanz.de/) introduced a highly recognizable\ CD. 
-Its key component is the ubiquitous use of a `Seeblau` color and a corresponding color palette that blends various shades of `Seeblau` (in boxes, lines, and other graphical elements) with text (in black-and-white). (See the [corporate design](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) pages for details.) 
+Even when writing an article or thesis, it makes sense to define some graphical elements (e.g., a color scheme) and use them consistently throughout the report. 
 
+<!-- Contents/goals of the unikn pgk: --> 
 
-<!-- Goals of the unikn pgk: --> 
-
-The **unikn** package facilitates the use of corporate design elements for users of [R](https://www.r-project.org/). 
+The **unikn** package facilitates the use of corporate design elements for R\ users. 
+It currently contains 16\ dedicated color palettes of the [University of Konstanz](https://www.uni-konstanz.de/), plus 13\ additional color palettes from other institutions. 
 In addition, the package provides a range of color functions that make it very easy to define, modify, find, and use colors and color palettes. 
 While this renders the use of default specifications simple and straightforward, experienced users can apply the tools provided by **unikn** in a flexible and creative fashion (e.g., for designing new color palettes and using them in scientific visualizations). 
 
@@ -85,9 +83,8 @@ library('unikn')           # loads the package
 The current development version can be installed from its [GitHub](https://github.com) repository at <https://github.com/hneth/unikn/>: 
 
 ```{r install-github, echo = TRUE, eval = FALSE}
-# install.packages('devtools')  # (if not installed yet)
+# install.packages('devtools')  # install pkg
 devtools::install_github('hneth/unikn')
-library('unikn')  # loads the package
 ```
 
 
@@ -95,70 +92,75 @@ library('unikn')  # loads the package
 
 The **unikn** contains two categories of color palettes: 
 
-- 16 palettes implementing the colors of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design; 
-- 13 additional color palettes from various institutions. 
+- 16\ palettes implementing the colors of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design, 
+- 13\ additional color palettes from various institutions. 
 
 
 ### The colors of Konstanz University
 
 Originally, the **unikn** package primarily provided the 16\ color palettes of the [University of Konstanz](https://www.uni-konstanz.de/):
 
-```{r pal-all, fig.align = 'center', fig.width = 6, out.width = "70%", fig.asp = .90}
+```{r pal-all, fig.align = 'center', fig.width = 6, out.width = "65%", fig.asp = .90}
 seecol("all_unikn")
 ```
 
-The distinctive and recognizable colors of these palettes were defined in the local **Corporate Design Manual** (see the [corporate design](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) specifications). 
+In\ 2014, the [University of Konstanz](https://www.uni-konstanz.de/) introduced a highly recognizable\ CD. 
+Its key component is the ubiquitous use of a `Seeblau` color and a corresponding color palette that blends various shades of `Seeblau` (in boxes, lines, and other graphical elements) with text (in black-and-white). 
 
+#### Basic color palette 
 
-#### Basic color palette
+The default **unikn** color palette `pal_unikn` combines shades of `pal_seeblau` and `pal_grau` with the base R colors "white" and "black" into a diverging, symmetrical palette (of 11\ colors):
 
-The default color palette `pal_unikn` combines:  
-
-- 5\ shades of `pal_seeblau` (reversed, i.e., from darker to lighter);  
-- the base R color `"white"` (as the center color);  
-- 4\ shades of grey (`pal_grau[1:4]`);  
-- the base R color `"black"` (as the last color).   
-
-This yields a diverging, symmetrical default color palette `pal_unikn` consisting of 11\ colors: 
-
-```{r pal-unikn, eval = TRUE, fig.width = 7, fig.asp = .75, fig.align = 'center'}
-# See/inspect color palette: ----- 
+```{r pal-unikn, eval = TRUE, fig.width = 6, fig.asp = .70, fig.align = 'center'}
 seecol(pal_unikn)
 ```
 
-<!-- <img src = "./inst/pix/README-pal_unikn-1.png" align = "center" alt = "pal_unikn" style = "border:10;"/> -->
+A shorter version (with 10\ colors) and an alternative (with more muted colors for PowerPoint presentations) are provided as\ `pal_unikn_web` and\ `pal_unikn_ppt`, respectively. 
+(Inspect `seecol("unikn_basic")` or see the [corporate design](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) specifications for details.)
 
-- A shorter version consisting of 10\ colors is provided as\ `pal_unikn_web`. 
+<!-- Details: Basic color palette -->
 
-- An alternative color palette with 10\ more muted colors (intended for PowerPoint presentations) is provided as\ `pal_unikn_ppt`. 
+<!-- The default color palette `pal_unikn` combines:   -->
 
-Evaluating `seecol(pal = "unikn_basic")` shows these three basic unikn color palettes. 
+<!-- - 5\ shades of `pal_seeblau` (reversed, i.e., from darker to lighter);   -->
+<!-- - the base R color `"white"` (as the center color);   -->
+<!-- - 4\ shades of grey (`pal_grau[1:4]`);   -->
+<!-- - the base R color `"black"` (as the last color).    -->
+
+<!-- This yields a diverging, symmetrical default color palette `pal_unikn` consisting of 11\ colors:  -->
+
+<!-- <!-- <img src = "./inst/pix/README-pal_unikn-1.png" align = "center" alt = "pal_unikn" style = "border:10;"/> --> -->
+
+<!-- - A shorter version consisting of 10\ colors is provided as\ `pal_unikn_web`.  -->
+<!-- - An alternative color palette with 10\ more muted colors (intended for PowerPoint presentations) is provided as\ `pal_unikn_ppt`.  -->
+
+<!-- Evaluating `seecol(pal = "unikn_basic")` shows these three basic unikn color palettes.  -->
 
 
 #### Special color palettes
 
-Several more specialized color palettes are combine the elements of nine different color hues. 
-Specifically, an\ Excel file entitled [Colours for complex graphics](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) defines 9\ color gradients that are created and exported by **unikn** as named color palettes: 
+Several more specialized color palettes combine the elements of nine color hues. 
+The preferred colors are contained in palette\ `pal_unikn_pref`: 
 
-```{r pal-additional, eval = FALSE}
-seecol(pal = "grad_all")
-```
-
-For instance, the 9\ preferred colors (i.e., named colors of distinct color hues) are contained in palette\ `pal_unikn_pref`: 
-
-```{r pal-unikn-pref, eval = TRUE, fig.width = 6, fig.asp = .75, fig.align = 'center'}
-# See the palette of 9 preferred colors/hues: 
+```{r pal-unikn-pref, eval = TRUE, fig.width = 6, fig.asp = .70, fig.align = 'center'}
 seecol(pal_unikn_pref)
 ```
 
-All these color palettes are exported as data frames that can be accessed by number, value, or name:
+Each distinct hue is exported as a named color (e.g., `Pinky`) and a corresponding gradient color palette (e.g., `pal_pinky`). 
+(Inspect `seecol("grad_all")` or the Excel file [Colours for complex graphics](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) for details.) 
+
+```{r pal-additional, echo = FALSE, eval = FALSE}
+seecol(pal = "grad_all")
+```
+
+**unikn** exports these color palettes as data frames that can be accessed by number, value, or name:
 
 ```{r pal-access, eval = FALSE}
-# Using preferred colors:
-pal_unikn_pref             # color palette of 9 preferred colors
-pal_unikn_pref[1]          # preferred (named) color 1
-pal_unikn_pref[[1]]        # color value 1: #59C7EB"
-pal_unikn_pref["Seeblau"]  # preferred color by name
+# Accessing colors from palettes:
+pal_unikn              # color palette of 11 colors
+pal_unikn[3]           # preferred (named) color 3
+pal_unikn[[3]]         # color value 3: #59C7EB"
+pal_unikn["seeblau3"]  # color by name
 ```
 
 <!-- #### Details {-} -->
@@ -206,7 +208,7 @@ seecol(pal_unikn_pair)   # palette of 16 paired colors (in 8 pairs)
 ### Additional color palettes
 
 In addition to the 16\ specific color palettes of the [University of Konstanz](https://www.uni-konstanz.de/), 
-**unikn** currently provides the general color palettes of the following institutions: 
+**unikn** currently provides color palettes of the following institutions: 
 
 - [ETH Zurich](https://ethz.ch/): `eth_pal`, `eth_pal_light`, `eth_pal_grey`
 - [Max Planck Society](https://www.mpg.de/): `mpg_pal`
@@ -215,16 +217,19 @@ In addition to the 16\ specific color palettes of the [University of Konstanz](h
 - [Princeton University](https://www.princeton.edu/): `uni_princeton_0`, `uni_princeton_1`, `uni_princeton_2` 
 
 
-```{r seecol-add-pals, fig.width = 7.5, out.width = "70%", fig.align = 'center', fig.asp = .90}
-seecol("add", main = "Color palettes from various institutions")
+```{r seecol-add-pals, fig.width = 7.2, out.width = "65%", fig.align = 'center', fig.asp = .90}
+# Inspect additional/alternative color palettes:
+seecol("add")
 ```
 
-These palettes are exported (as named vectors), documented (to credit their contributors and sources), and can be used by the R community (e.g., when creating visualizations or modified with the **unikn** [color functions](colors.html)). 
+These palettes are exported (as named vectors), documented (to credit their contributors and sources), and can easily be used and modified by the R community (e.g., in visualizations). 
 
 
 <!-- Collecting contributed color palettes: -->
 
 #### Call for contributions {-}
+
+We are currently expanding the range of color palettes from other institutions: 
 
 **Collecting color palettes**
 
@@ -258,24 +263,35 @@ Beyond defining colors and color palettes, the **unikn** package provides a rang
 The `seecol()` function enables a quick inspection of a color palette. 
 It provides a quick overview over the details of a color palette and allows comparisons between multiple color palettes: 
 
-```{r seecol-pref, eval = TRUE, fig.align = 'center', fig.width = 7, fig.asp = .80}
-# See/inspect color palette: 
-seecol(pal = eth_pal,                    # a color palette to plot
-       hex = TRUE,                       # show HEX code of colors?
-       col_brd = "white", lwd_brd = 5,   # color and width of borders
-       main = "Colors of the ETH Zurich")  
+```{r seecol-pref, fig.width = 7, out.width = "65%", fig.align = 'center', fig.asp = .80}
+# Inspect an individual color palette:
+seecol(pal = eth_pal,                      # a color palette / list of palettes / keyword
+       hex = TRUE,                         # show HEX codes?
+       col_brd = "white", lwd_brd = 5,     # color and width of borders
+       main = "Colors of the ETH Zurich")  # plot title 
 ```
 
-#### Partial color palettes
+#### Using partial color palettes
 
 When only a subset of a color palette are needed, the `seecol()` and `usecol()` functions aim to provide a reasonable subset of a **unikn** color palette: 
 
-```{r pal-n, eval = TRUE, fig.width = 6, fig.asp = .75, fig.align = 'center'}
-# Scale color palettes: 
-seecol(pal = "add", n = 3, 
+```{r pal-n, fig.width = 6, out.width = "55%", fig.align = 'center', fig.asp = .75}
+# Scale a color palette:
+usecol(pal_unikn, n = 3, use_names = TRUE)
+
+# Compare a list of (scaled) color palettes: 
+seecol(pal = "grad_all", n = 3, 
        col_brd = "black", lwd_brd = .5,
        main = "Scaled color palettes (n = 3)")
 ```
+
+<!-- +++ here now +++ -->
+
+<!-- - Using: base / ggplot -->
+<!-- - Changing color palettes -->
+<!-- - Finding: by color / by name -->
+<!-- - Creating new palettes -->
+
 
 #### Changing and creating color palettes
 
