--- a/README.Rmd
+++ b/README.Rmd
@@ -51,15 +51,16 @@ Even when writing an article or thesis, it makes sense to define some graphical 
 <!-- Contents/goals of the unikn pgk: --> 
 
 The **unikn** package facilitates the use of corporate design elements for R\ users. 
-It currently contains 16\ dedicated color palettes of the [University of Konstanz](https://www.uni-konstanz.de/), plus 13\ additional color palettes from other institutions. 
-In addition, the package provides a range of color functions that make it very easy to define, modify, find, and use colors and color palettes. 
-While this renders the use of default specifications simple and straightforward, experienced users can apply the tools provided by **unikn** in a flexible and creative fashion (e.g., for designing new color palettes and using them in scientific visualizations). 
+It currently contains dedicated **colors** and **color palettes** of the [University of Konstanz](https://www.uni-konstanz.de/), 
+plus many additional color palettes from other institutions. 
+In addition, **unikn** provides a range of **color functions** that make it easy to define, modify, find, and use colors in\ R. 
+While this renders the use of default specifications simple and straightforward, experienced users can apply the tools in a flexible and creative fashion (e.g., for designing new color palettes and using them in scientific visualizations). 
 
 <!-- Overview: --> 
 
 The **unikn** package currently provides five types of objects and functions: 
 
-1. Many dedicated **colors** and **color palettes** (e.g., `Seeblau` and `pal_unikn`);  
+1. Pre-defined **colors** and **color palettes** (e.g., `Seeblau` and `pal_unikn`);  
 
 2. Functions for **viewing and comparing colors** (`seecol()`), for **using or changing color palettes** (`usecol()`), and for **demonstrating color palettes** (`demopal()`);  
 3. Functions for **creating new color palettes** (`newpal()`), for **finding similar colors** (`simcol()`), and for **searching color names** (`grepal()`);  
@@ -68,7 +69,9 @@ The **unikn** package currently provides five types of objects and functions:
 5. Functions for **plotting styled text** elements (e.g., highlighting and underlining text).  
 <!-- 6. Graphical support (e.g., commands and themes for creating scientific visualizations). -->
 
-Essentially, **unikn** began by defining some colors, but has now grown into a toolbox for addressing color- and plotting-related tasks in\ R. As we have fun creating it, we hope you find the package useful too ---\ and please use responsibly! 
+
+Essentially, the **unikn** package began by defining some colors, but has now grown into a toolbox for addressing color- and plotting-related tasks in\ R. 
+As we had fun creating it, we hope that you enjoy using it as well! 
 
 
 ## Installation
@@ -92,8 +95,9 @@ devtools::install_github('hneth/unikn')
 
 The **unikn** contains two categories of color palettes: 
 
-- 16\ palettes implementing the colors of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design, 
-- 13\ additional color palettes from various institutions. 
+- 16\ palettes implementing the colors of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design
+
+- 13\ additional color palettes from various institutions
 
 
 ### The colors of Konstanz University
@@ -129,7 +133,7 @@ A shorter version (with 10\ colors) and an alternative (with more muted colors f
 
 <!-- This yields a diverging, symmetrical default color palette `pal_unikn` consisting of 11\ colors:  -->
 
-<!-- <!-- <img src = "./inst/pix/README-pal_unikn-1.png" align = "center" alt = "pal_unikn" style = "border:10;"/> --> -->
+<!-- <img src = "./inst/pix/README-pal_unikn-1.png" align = "center" alt = "pal_unikn" style = "border:10;"/> -->
 
 <!-- - A shorter version consisting of 10\ colors is provided as\ `pal_unikn_web`.  -->
 <!-- - An alternative color palette with 10\ more muted colors (intended for PowerPoint presentations) is provided as\ `pal_unikn_ppt`.  -->
