--- a/README.Rmd
+++ b/README.Rmd
@@ -275,9 +275,45 @@ seecol(pal = eth_pal,                      # a color palette / list of palettes 
        main = "Colors of the ETH Zurich")  # plot title 
 ```
 
+### Using color palettes with `usecol()` 
+
+Colors and color palettes in R come in various types (e.g., as named colors, RGB values or Hex codes) and forms (e.g., as data frames or vectors). 
+The `usecol()` function provides a generic wrapper for changing (e.g., mixing and re-scaling) and using color palettes. 
+This allows using colors in **base** R and most other R packages. 
+For example, we can easily use colors in combination with 
+
+- the `barplot()` function of the **grDevices** package:
+
+```{r usecol-1, eval = TRUE, fig.width = 5, fig.asp = .75, fig.align = 'center', collapse = TRUE}
+# Mix some colors into a new palette:
+my_pal <- usecol(c(Seeblau, "white", Pinky), n = 9)
+
+# Use color palette:
+barplot(1/sqrt(1:9),  col = my_pal)
+```
+
+- the `image()` function of the **graphics** package:
+
+```{r usecol-2, eval = TRUE, fig.width = 3.5, fig.height = 4, fig.show = 'hold', fig.align = 'center'}
+# Mix Bordeaux and "gold" colors:
+x <- y <- seq(-4 * pi, 4 * pi, len = 15)
+r <- sqrt(outer(x^2, y^2, "+"))
+image(z = cos(r^2) * exp(-r/6), col = usecol(c(Bordeaux, "gold"), n = 9), 
+      main = 'Shades of Bordeaux/"gold"', axes = FALSE)
+```
+
+- the `ggplot()` function of the **ggplot2** package: 
+
+
+
+<!-- +++ here now +++ -->
+
+
+
+
 #### Using partial color palettes
 
-When only a subset of a color palette are needed, the `seecol()` and `usecol()` functions aim to provide a reasonable subset of a **unikn** color palette: 
+When only some colors of a color palette are needed, the `seecol()` and `usecol()` functions provide reasonable subsets of a **unikn** palette: 
 
 ```{r pal-n, fig.width = 6, out.width = "55%", fig.align = 'center', fig.asp = .75}
 # Scale a color palette:
@@ -289,7 +325,7 @@ seecol(pal = "grad_all", n = 3,
        main = "Scaled color palettes (n = 3)")
 ```
 
-<!-- +++ here now +++ -->
+
 
 <!-- - Using: base / ggplot -->
 <!-- - Changing color palettes -->
@@ -417,8 +453,8 @@ image(m, col = usecol(pal_seeblau, n = 50),
 # Mix pal_seeblau and pal_seegruen:
 x <- y <- seq(-4 * pi, 4 * pi, len = 15)
 r <- sqrt(outer(x^2, y^2, "+"))
-image(z = cos(r^2) * exp(-r/6), col = usecol(c(pal_petrol, pal_seegruen), n = 10), 
-      main = "Shades of Petrol/Seegruen", axes = FALSE)
+image(z = cos(r^2) * exp(-r/6), col = usecol(c(Bordeaux, "gold"), n = 9), 
+      main = 'Shades of Bordeaux/"gold"', axes = FALSE)
 ```
 
 #### 2. Plotting with **ggplot2**
@@ -448,9 +484,9 @@ df <- df[order(df$X, df$group) , ]
 
 # (a) using RColorBrewer: 
 library(RColorBrewer)
-cur_col <- brewer.pal(11, "Paired") 
+cur_col <- brewer.pal(11, "Spectral") 
 cur_col <- colorRampPalette(cur_col)(n)
-cur_col <- cur_col[sample(c(1:length(cur_col)), size = length(cur_col))]  # randomize
+# cur_col <- cur_col[sample(c(1:length(cur_col)), size = length(cur_col))]  # randomize
 
 # (b) using unikn:
 library(unikn)
