--- a/README.Rmd
+++ b/README.Rmd
@@ -295,16 +295,62 @@ barplot(1/sqrt(1:9),  col = my_pal)
 - the `image()` function of the **graphics** package:
 
 ```{r usecol-2, eval = TRUE, fig.width = 3.5, fig.height = 4, fig.show = 'hold', fig.align = 'center'}
-# Mix Bordeaux and "gold" colors:
+# Data:
 x <- y <- seq(-4 * pi, 4 * pi, len = 15)
 r <- sqrt(outer(x^2, y^2, "+"))
-image(z = cos(r^2) * exp(-r/6), col = usecol(c(Bordeaux, "gold"), n = 9), 
-      main = 'Shades of Bordeaux/"gold"', axes = FALSE)
+
+# Mix a palette with a named color:
+my_col <- usecol(c(Seegruen, "white"), n = 7)
+
+# Image:
+image(z = cos(r^2) * exp(-r/10), 
+      col = my_col, axes = FALSE)
 ```
 
 - the `ggplot()` function of the **ggplot2** package: 
 
+```{r usecol-ggplot-data, echo = FALSE, eval = TRUE, out.width = "55%", fig.asp = .618, fig.align = 'center', collapse = TRUE}
+# 0. Create data: ---- 
 
+# Example based on https://www.r-graph-gallery.com/137-spring-shapes-data-art/
+n <- 50
+names <- 1:n
+df <- data.frame()
+
+set.seed(3)
+for(i in seq(1:30)){
+    data = data.frame(matrix(0, n, 3))
+    data[, 1] <- i
+    data[, 2] <- sample(names, nrow(data))
+    data[, 3] <- prop.table(sample( c(rep(0, 100), c(1:n)), nrow(data)))
+    df = rbind(df, data)}
+names(df) <- c("X","Group","Y")
+
+df$Group <- as.factor(df$Group)  # Group as factor
+df <- df[c(2, 1, 3)]             # order of variables
+df <- df[order(df$X, df$Group) , ] # order of rows
+rownames(df) <- NULL
+
+my_data <- df  # copy
+```
+
+```{r usecol-ggplot2, eval = TRUE, out.width = "55%", fig.asp = .618, fig.align = 'center', collapse = TRUE}
+# Data:
+# knitr::kable(head(my_data))
+n <- length(levels(my_data$Group))
+
+# Mix a color gradient: 
+my_col <- usecol(c(Bordeaux, "white", Petrol), n = n)
+
+# Plot (with ggplot2):
+library(ggplot2)
+
+ggplot(my_data, aes(x = X, y = Y, fill = Group)) + 
+  geom_area() +
+  scale_fill_manual(values = my_col) +
+  theme_void() +
+  theme(legend.position = "none")
+```
 
 <!-- +++ here now +++ -->
 
